fix: bug - fix README - add test